# PDF-Solution

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  MEMORY.md  README.md  docker-compose.yml  implementation-plan.md  milestone-0-acceptance-matrix.md  project.md  pyproject.toml  work-breakdown.md
.planning/: REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/codebase/: ARCHITECTURE.md  STRUCTURE.md
.planning/phases/01-foundation-skill-architecture/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-03-PLAN.md
.planning/phases/02-parsing-layout-foundation/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-03-PLAN.md
.planning/phases/03-deterministic-remediation/: 03-01-PLAN.md  03-01-SUMMARY.md  03-02-PLAN.md  03-03-PLAN.md  03-CONTEXT.md
scripts/: benchmark.py  generate_docs_images.py
src/pdf_accessibility/: __init__.py  main.py
tests/: test_ai_assist_service.py  test_ai_skills.py  test_earl_reporting.py  test_form_detection.py  test_form_repair.py  test_health.py  test_milestone_8_e2e.py  test_models_layout.py  test_models_validation_enhanced.py  test_pac_integration.py  test_pdf_parser_accessibility_meta.py  test_pdf_parser_enhanced.py  test_pdf_tagging_output.py  test_reading_order.py  test_remediation_structural.py  test_review_flow_e2e.py  test_rule_catalog.py  test_skill_registry.py  test_table_detection.py  test_table_repair.py  test_tagging_engine.py  test_validation_content_meta_skills.py  test_validation_document_skills.py  test_validation_engine.py  test_validation_structural_skills.py
ui/: Dockerfile  package.json
ui/src/app/: page.tsx
(+97 files in other folders)
